<?xml version="1.0"?>
<package format="2">
  <name>flexbe_behavior_engine</name>
  <version>2.1.0</version>
  <description>
    A meta-package to aggregate all the FlexBE packages
  </description>

  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe</url>
  <url type="bugtracker">https://github.com/FlexBE/flexbe_behavior_engine/issues</url>

  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_input</exec_depend>
  <exec_depend>flexbe_mirror</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>flexbe_onboard</exec_depend>
  <exec_depend>flexbe_states</exec_depend>
  <exec_depend>flexbe_testing</exec_depend>
  <exec_depend>flexbe_widget</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <metapackage/> -->
  </export>

</package>
