<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>flexbe_core</name>
    <version>2.1.0</version>
    <description>
        flexbe_core provides the core components for the FlexBE behavior engine.
    </description>
    <author>Philipp Schillinger</author>
    <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>

    <license>BSD</license>
    <url type="website">http://ros.org/wiki/flexbe_core</url>
    <url type="bugtracker">https://github.com/FlexBE/flexbe_behavior_engine/issues</url>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>flexbe_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
