<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>flexbe_input</name>
    <version>2.3.3</version>
    <description>
        flexbe_input enables to send data to onboard behavior when required.
    </description>
    <author>Philipp Schillinger</author>
    <maintainer email="philsplus@gmail.com">Philipp Schillinger</maintainer>
    <maintainer email="robotics@cnu.edu">David Conner</maintainer>

    <license>BSD</license>
    <url type="website">http://ros.org/wiki/flexbe_core</url>
    <url type="bugtracker">https://github.com/FlexBE/flexbe_behavior_engine/issues</url>

    <depend>rclpy</depend>
    <depend>flexbe_core</depend>
    <depend>flexbe_msgs</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
