<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>flexbe_onboard</name>
    <version>2.3.2</version>
    <description>
        flexbe_onboard implements the robot-side of the behavior engine from where all behaviors are started.
    </description>
    <author>Philipp Schillinger</author>
    <maintainer email="philsplus@gmail.com">Philipp Schillinger</maintainer>
    <maintainer email="robotics@cnu.edu">David Conner</maintainer>

    <license>BSD</license>
    <url type="website">http://ros.org/wiki/flexbe_core</url>
    <url type="bugtracker">https://github.com/FlexBE/flexbe_behavior_engine/issues</url>

    <depend>rclpy</depend>
    <depend>flexbe_msgs</depend>
    <depend>flexbe_core</depend>
    <depend>flexbe_states</depend>
    <depend>launch_ros</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>
    <test_depend>launch_testing</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
